# dlvm-core

./: .gitignore  CMakeLists.txt  CODE_OWNERS.txt  CREDITS.txt  LICENSE  Makefile  Package.swift  README.md
Compute/: CMakeLists.txt
Compute/include/: compute.h  hpvm.h  sgemm.h  swiftdecl.h
Compute/src/: conv.swift  hpvm.swift  mmul.swift
ComputePrimitives/: hpvm.swift
CuDNN.xcodeproj/: project.pbxproj
DLVM.xcodeproj/: project.pbxproj
Documentation/: Manifesto.org  automatic-differentiation.org  brainstorm.txt  type-system.org
FileCheck/: autodiff.dl  autodiff_simp.dl  cfg_canonicalization.dl  cfg_simplification.dl  convolve.dl  cse.dl  dce.dl  enum.dl  lit.cfg  literal_broadcasting_promotion.dl  matrix_chain_multiplication.dl  matrix_multiplication_reordering.dl  recursion.dl  scalar.dl  scalar_algsimp.dl  test0.dl
Grammar/: DLVM.g4
LLNM.xcodeproj/: project.pbxproj
Resources/TEL/: ffnn.dl  ffnn.dlvm  ffnn.tel  grammar.txt  mnist.demo.dl  mnist.demo.tel  mnist.dl  mnist.tel  net1.tel  new-syntax.tel  rnn.tel  rnn2.dl
Resources/pkgconfig/: llvm.pc
Runtime/: CMakeLists.txt
Runtime/include/: access_owner.h  ad_stack.h  dlrt.h  memory_tracker.h  reference.h  swiftdecl.h
Runtime/src/: ad_stack.cpp  memory_tracker.cpp  reference.c
Sources/: AD.swift  Algorithm.swift  CuDNN.swift  DNN.swift  Error.swift  Expression.swift  ExpressionGraph.swift  Graph.swift  Node.swift  PrettyPrint.swift  Shape.swift  Tensor.swift  TensorOperators.swift  Types.swift
Sources/CoreCompute/: Computation.swift  Expression.swift  Statement.swift  Type.swift  Variable.swift
Sources/CoreOp/: DataType.swift  Op.swift  Shaping.swift
Sources/DLCommandLineTools/: Diagnostics.swift  Error.swift  IO.swift  Options.swift  Passes.swift  Tool.swift
Sources/DLParse/: AST.swift  Diagnostics.swift  Lex.swift  (+3 more)
Tests/: LinuxMain.swift
(+208 files in other folders)
